# devtul-core

./: .flake8  README.md  check.cmd  compose.yml  mkdocs.yml  pyproject.toml  serve_coverage.py
docker/: Dockerfile  index.html  nginx.conf
docs/: index.md
scripts/: check.cmd  check.fish  check.sh  launch_docker.ps1  serve_coverage.py
src/devtul_core/: __init__.py  constants.py  db_models.py  fs_factory.py  fs_models.py  ingestor.py
templates/: file_page.md.jinja  repo_doc.md.jinja
tests/: test_core.py  test_db_ingest.py  test_fs_factory.py  test_fs_models.py
