[project]
name = "devtul-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv_build]
package-dir = "src"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(\.
    git
  | hg
  | mtn
  | svn
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
